--- a/PAScrollableMenu/Base.lproj/Main.storyboard
+++ b/PAScrollableMenu/Base.lproj/Main.storyboard
@@ -17,23 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNj-ij-PEJ" customClass="PAScrollableMenu">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpx-n8-oYa" customClass="PAScrollableMenu">
                                 <rect key="frame" x="0.0" y="20" width="600" height="50"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="15l-c1-cTw"/>
+                                    <constraint firstAttribute="height" constant="50" id="fGb-81-hL8"/>
                                 </constraints>
-                            </view>
+                                <connections>
+                                    <outlet property="scrollableMenuDataSource" destination="BYZ-38-t0r" id="ima-nx-nU6"/>
+                                    <outlet property="scrollableMenuDelegate" destination="BYZ-38-t0r" id="174-J2-a0L"/>
+                                </connections>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="VNj-ij-PEJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="RtZ-Ki-eHP"/>
-                            <constraint firstAttribute="trailing" secondItem="VNj-ij-PEJ" secondAttribute="trailing" id="Tq2-Zy-kn5"/>
-                            <constraint firstItem="VNj-ij-PEJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sY2-OZ-TLb"/>
+                            <constraint firstAttribute="trailing" secondItem="cpx-n8-oYa" secondAttribute="trailing" id="6Zo-XT-Z7a"/>
+                            <constraint firstItem="cpx-n8-oYa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Zs6-WY-eXe"/>
+                            <constraint firstItem="cpx-n8-oYa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="msc-LR-bVO"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="scrollableMenuView" destination="VNj-ij-PEJ" id="H9a-Mw-f5c"/>
+                        <outlet property="scrollableMenuView" destination="cpx-n8-oYa" id="4Zq-li-SrT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
