--- a/PAScrollableMenu/Base.lproj/Main.storyboard
+++ b/PAScrollableMenu/Base.lproj/Main.storyboard
@@ -28,15 +28,39 @@
                                     <outlet property="scrollableMenuDelegate" destination="BYZ-38-t0r" id="174-J2-a0L"/>
                                 </connections>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OON-YS-Wrd">
+                                <rect key="frame" x="271" y="358" width="59" height="30"/>
+                                <state key="normal" title="Cambiar">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cambiarActn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ze7-7f-PKR"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6L-nv-PHO" customClass="PAAnimatableLabel">
+                                <rect key="frame" x="125" y="250" width="350" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="350" id="6xr-cJ-bfV"/>
+                                    <constraint firstAttribute="height" constant="100" id="8mX-Py-8f3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="cpx-n8-oYa" secondAttribute="trailing" id="6Zo-XT-Z7a"/>
+                            <constraint firstItem="OON-YS-Wrd" firstAttribute="centerX" secondItem="A6L-nv-PHO" secondAttribute="centerX" id="IYV-d9-A12"/>
+                            <constraint firstItem="OON-YS-Wrd" firstAttribute="top" secondItem="A6L-nv-PHO" secondAttribute="bottom" constant="8" id="Mon-7D-z0L"/>
                             <constraint firstItem="cpx-n8-oYa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Zs6-WY-eXe"/>
+                            <constraint firstAttribute="centerX" secondItem="A6L-nv-PHO" secondAttribute="centerX" id="eyo-5M-XXd"/>
+                            <constraint firstAttribute="centerY" secondItem="A6L-nv-PHO" secondAttribute="centerY" id="hSK-7X-gto"/>
                             <constraint firstItem="cpx-n8-oYa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="msc-LR-bVO"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="animatableLabel" destination="A6L-nv-PHO" id="GiI-3Q-aVW"/>
                         <outlet property="scrollableMenuView" destination="cpx-n8-oYa" id="4Zq-li-SrT"/>
                     </connections>
                 </viewController>
