--- a/PAScrollableMenu/Base.lproj/Main.storyboard
+++ b/PAScrollableMenu/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     <outlet property="scrollableMenuDelegate" destination="BYZ-38-t0r" id="174-J2-a0L"/>
                                 </connections>
                             </scrollView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bng-vG-TdS">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bng-vG-TdS">
                                 <rect key="frame" x="0.0" y="472" width="600" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="XGH-vB-KLX"/>
